# haskell-cc-cedict

./: README.md  cc-cedict.cabal  flake.nix
example/: Example.hs  README.md  example.cabal
src/: CCCEdict.hs
