cabal-version: 3.4
name: cc-cedict
version: 0.1.0.0
license: NONE
build-type: Simple

library
    hs-source-dirs: src
    ghc-options: -Wall
    default-language: GHC2024
    default-extensions:
      LambdaCase
      OverloadedStrings
      RecordWildCards
    build-depends:
      base,
      containers,
      mtl,
      streaming,
      text,
    exposed-modules:
      CCCEdict
